--- a/DatabaseSample/DatabaseSample/DatabaseSample.csproj
+++ b/DatabaseSample/DatabaseSample/DatabaseSample.csproj
@@ -204,7 +204,8 @@
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\sqlOperations.cs" />
-    <Compile Include="Controllers\teamController.cs" />
+    <Compile Include="Controllers\SqlQueriesForTeam.cs" />
+    <Compile Include="Controllers\TeamController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
